--- a/assets/css/scss/Styles/_nav.scss
+++ b/assets/css/scss/Styles/_nav.scss
@@ -598,3 +598,11 @@
 
 }
 
+// Full Page Nav
+
+[data-tooltip] {
+
+     white-space: nowrap;
+
+}
+
